--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     }	
   </style>
 </head>
+<script type='text/javascript' src='//pl25360387.profitableratecpm.com/dd/2b/42/dd2b42b09a77c8efe6fdff35fbfbc733.js'></script>
 <body>
   <header>
     <h1>Your Ultimate Video Gallery for Viral Content</h1>
@@ -154,7 +155,7 @@
         <meta itemprop="description" content="A humorous clip showing a person's perspective from behind a pair of shoes." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/URL1SKz11.mp4" />
-        <a href="https://brexit-web.github.io/URL1SKz11.mp4" class="video-link" aria-label="Watch video: behind the shoes">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/00gfEX3n1.mp4" class="video-link" aria-label="Watch video: behind the shoes">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -163,7 +164,7 @@
         <meta itemprop="description" content="A short video clip of someone rushing, in a hurry." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/NA0xNeGZ1.mp4" />
-        <a href="https://brexit-web.github.io/NA0xNeGZ1.mp4" class="video-link" aria-label="Watch video: he's in a hurry">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/0AHdX2Zg1.mp4" class="video-link" aria-label="Watch video: he's in a hurry">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -172,7 +173,7 @@
         <meta itemprop="description" content="A video portraying someone's struggle or inability to endure a situation." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/bg3xtfL31.mp4" />
-        <a href="https://brexit-web.github.io/bg3xtfL31.mp4" class="video-link" aria-label="Watch video: I couldn't stand it">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/0D4o5dVH1.mp4" class="video-link" aria-label="Watch video: I couldn't stand it">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -181,7 +182,7 @@
         <meta itemprop="description" content="Relaxing video of beautiful ocean waves." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/4KEnOYXX1.mp4" />
-        <a href="https://brexit-web.github.io/4KEnOYXX1.mp4" class="video-link" aria-label="Watch video: Look at the waves">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/0FnAUMSB1.mp4" class="video-link" aria-label="Watch video: Look at the waves">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -190,7 +191,7 @@
         <meta itemprop="description" content="A video showcasing an ideal or desirable tutor." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/lAStCbav1.mp4" />
-        <a href="https://brexit-web.github.io/lAStCbav1.mp4" class="video-link" aria-label="Watch video: tutor i always wanted">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/0MM7s1W31.mp4" class="video-link" aria-label="Watch video: tutor i always wanted">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -199,7 +200,7 @@
         <meta itemprop="description" content="A captivating video highlighting the majestic stripes of a tiger." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/kRUTOHRL1.mp4" />
-        <a href="https://brexit-web.github.io/kRUTOHRL1.mp4" class="video-link" aria-label="Watch video: Tiger stripes, fearless">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/16oS2YP11.mp4" class="video-link" aria-label="Watch video: Tiger stripes, fearless">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -208,7 +209,7 @@
         <meta itemprop="description" content="A dynamic video of people dancing or engaging in a strenuous activity." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/UmlFZ5Lv1.mp4" />
-        <a href="https://brexit-web.github.io/UmlFZ5Lv1.mp4" class="video-link" aria-label="Watch video: Love got us sweatin">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/1QxoCPLa1.mp4" class="video-link" aria-label="Watch video: Love got us sweatin">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -217,7 +218,7 @@
         <meta itemprop="description" content="A video focusing on pink painted toes, possibly in a celebratory context." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/uKvPHWBp1.mp4" />
-        <a href="https://brexit-web.github.io/uKvPHWBp1.mp4" class="video-link" aria-label="Watch video: Pink toes for the win">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/1zeEPb1g1.mp4" class="video-link" aria-label="Watch video: Pink toes for the win">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -226,7 +227,7 @@
         <meta itemprop="description" content="A motivational video about feeling blessed or highly favored." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/iRBuM8DN1.mp4" />
-        <a href="https://brexit-web.github.io/iRBuM8DN1.mp4" class="video-link" aria-label="Watch video: I'm highly favored">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/25bVjMdX1.mp4" class="video-link" aria-label="Watch video: I'm highly favored">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -235,7 +236,7 @@
         <meta itemprop="description" content="A video depicting something that causes intense burning or passion." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/cfXoD4Wt1.mp4" />
-        <a href="https://brexit-web.github.io/cfXoD4Wt1.mp4" class="video-link" aria-label="Watch video: makes everything burn">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/25iJkoLL1.mp4" class="video-link" aria-label="Watch video: makes everything burn">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -244,7 +245,7 @@
         <meta itemprop="description" content="A video showcasing a woman's bravery or daring act." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/Zqke9Nw91.mp4" />
-        <a href="https://brexit-web.github.io/Zqke9Nw91.mp4" class="video-link" aria-label="Watch video: This woman is very brave">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/2uSzlZVu1.mp4" class="video-link" aria-label="Watch video: This woman is very brave">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -253,7 +254,7 @@
         <meta itemprop="description" content="A video clip of someone doing something unexpected or bold in a public setting." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/wQUqfhds1.mp4" />
-        <a href="https://brexit-web.github.io/wQUqfhds1.mp4" class="video-link" aria-label="Watch video: actually did it in public">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/3OKbz5sZ1.mp4" class="video-link" aria-label="Watch video: actually did it in public">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -262,7 +263,7 @@
         <meta itemprop="description" content="A cute video featuring a beautiful cat." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/ECvAFrSS1.mp4" />
-        <a href="https://brexit-web.github.io/ECvAFrSS1.mp4" class="video-link" aria-label="Watch video: Pretty Kitty">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/4AKAmAR81.mp4" class="video-link" aria-label="Watch video: Pretty Kitty">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -271,7 +272,7 @@
         <meta itemprop="description" content="A video capturing an event or object situated in the middle of a road." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/tf6Qm5ZE1.mp4" />
-        <a href="https://brexit-web.github.io/tf6Qm5ZE1.mp4" class="video-link" aria-label="Watch video: in the middle of the road">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/4G6QbxpO1.mp4" class="video-link" aria-label="Watch video: in the middle of the road">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -280,7 +281,7 @@
         <meta itemprop="description" content="A video showing interactions or activities involving a brother-in-law." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/KLJYr2fp1.mp4" />
-        <a href="https://brexit-web.github.io/KLJYr2fp1.mp4" class="video-link" aria-label="Watch video: with brother-in-law">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/4Uo2Ujm01.mp4" class="video-link" aria-label="Watch video: with brother-in-law">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -289,7 +290,7 @@
         <meta itemprop="description" content="A video featuring a beautiful view with an unexpected or powerful element." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/Jn93oIB21.mp4" />
-        <a href="https://brexit-web.github.io/Jn93oIB21.mp4" class="video-link" aria-label="Watch video: beautiful view hit harder">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/4w1vHxgW1.mp4" class="video-link" aria-label="Watch video: beautiful view hit harder">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -298,7 +299,7 @@
         <meta itemprop="description" content="A video clip featuring content from an OnlyFans creator." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/qeOC3VYU1.mp4" />
-        <a href="https://brexit-web.github.io/qeOC3VYU1.mp4" class="video-link" aria-label="Watch video: Her OF video">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/4yyGx0cJ1.mp4" class="video-link" aria-label="Watch video: Her OF video">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -307,7 +308,7 @@
         <meta itemprop="description" content="A video exploring the desire or possibility of possessing something." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/SZgPtiDm1.mp4" />
-        <a href="https://brexit-web.github.io/SZgPtiDm1.mp4" class="video-link" aria-label="Watch video: Can we have this">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/50Q8UsFM1.mp4" class="video-link" aria-label="Watch video: Can we have this">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -316,7 +317,7 @@
         <meta itemprop="description" content="A video showcasing qualities considered ideal for a wife." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/exRhgI5o1.mp4" />
-        <a href="https://brexit-web.github.io/exRhgI5o1.mp4" class="video-link" aria-label="Watch video: That's wife type">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/5NmqUzAQ1.mp4" class="video-link" aria-label="Watch video: That's wife type">Watch Video Now</a>
       </figure>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -325,12 +326,12 @@
         <meta itemprop="description" content="A video clip featuring someone excelling in a top riding activity." />
         <meta itemprop="uploadDate" content="2025-08-02" />
         <link itemprop="contentUrl" href="https://brexit-web.github.io/Yf43JBWu1.mp4" />
-        <a href="https://brexit-web.github.io/Yf43JBWu1.mp4" class="video-link" aria-label="Watch video: see you in top riding">Watch Video Now</a>
+        <a href="https://cdn-videykey654.github.io/5NmqUzAQ1.mp4" class="video-link" aria-label="Watch video: see you in top riding">Watch Video Now</a>
       </figure>
     </section>
   </main>
 
-  <a href="https://carlito471.github.io" class="video-link next-page-button">Go to Next Page</a>
+  <a href="https://moviereview20255.blogspot.com" class="video-link next-page-button">Go to Next Page</a>
 
   <footer>
     <p>&copy; 2025 Videy.co. All rights reserved.</p>
