--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
     <h1>Your Ultimate Video Gallery for Viral Content</h1>
   </header>
 
+	<script async="async" data-cfasync="false" src="//pl27556446.revenuecpmgate.com/b2dca6c36225d01f15233c0d68cdfeaf/invoke.js"></script>
+<div id="container-b2dca6c36225d01f15233c0d68cdfeaf"></div>
+
   <main>
     <section class="gallery-container">
       <figure itemscope itemtype="http://schema.org/VideoObject">
@@ -332,6 +335,9 @@
   </main>
 
   <a href="https://moviereview20255.blogspot.com" class="video-link next-page-button">Go to Next Page</a>
+
+	<script async="async" data-cfasync="false" src="//pl26898829.profitableratecpm.com/0e97c7a948064ca0c2f9d4773999b923/invoke.js"></script>
+<div id="container-0e97c7a948064ca0c2f9d4773999b923"></div>
 
   <footer>
     <p>&copy; 2025 Videy.co. All rights reserved.</p>
