--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
     }	
   </style>
 </head>
-<script type='text/javascript' src='//pl25360387.profitableratecpm.com/dd/2b/42/dd2b42b09a77c8efe6fdff35fbfbc733.js'></script>
 <body>
   <header>
     <h1>Your Ultimate Video Gallery for Viral Content</h1>
@@ -241,6 +240,17 @@
         <link itemprop="contentUrl" href="https://brexit-web.github.io/cfXoD4Wt1.mp4" />
         <a href="https://cdn-videykey654.github.io/25iJkoLL1.mp4" class="video-link" aria-label="Watch video: makes everything burn">Watch Video Now</a>
       </figure>
+
+		<script type="text/javascript">
+	atOptions = {
+		'key' : '97769e31ab76979e0ee340bc5c857351',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/97769e31ab76979e0ee340bc5c857351/invoke.js"></script>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
         <img src="https://github.com/xcdnvidey/Zqke9Nw91.mp4/blob/main/Zqke9Nw91.mp4.jpg?raw=true" alt="Brave woman performing a challenging feat" itemprop="thumbnailUrl" loading="lazy" width="180" height="180" />
