--- a/index.html
+++ b/index.html
@@ -279,6 +279,17 @@
         <a href="https://cdn-videykey654.github.io/4AKAmAR81.mp4" class="video-link" aria-label="Watch video: Pretty Kitty">Watch Video Now</a>
       </figure>
 
+		<script type="text/javascript">
+	atOptions = {
+		'key' : '4a2fc598ebbbdbc95eb3bef73798c939',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/4a2fc598ebbbdbc95eb3bef73798c939/invoke.js"></script>
+
       <figure itemscope itemtype="http://schema.org/VideoObject">
         <img src="https://github.com/xcdnvidey/tf6Qm5ZE1.mp4/blob/main/tf6Qm5ZE1.mp4.jpg?raw=true" alt="Obstacle or event happening in the middle of a road" itemprop="thumbnailUrl" loading="lazy" width="180" height="180" />
         <figcaption itemprop="name">in the middle of the road</figcaption>
