--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
     }	
   </style>
 </head>
+<!-- JuicyAds Native Interstitals v1.0 -->
+<script type="text/javascript" data-id="juicyads-native-ads" data-ad-zone="1102572" data-targets="a" src="https://js.juicyads.com/juicyads.native-ads.min.js"></script>	
 <body>
   <header>
     <h1>Your Ultimate Video Gallery for Viral Content</h1>
@@ -241,17 +243,6 @@
         <a href="https://cdn-videykey654.github.io/25iJkoLL1.mp4" class="video-link" aria-label="Watch video: makes everything burn">Watch Video Now</a>
       </figure>
 
-		<script type="text/javascript">
-	atOptions = {
-		'key' : '97769e31ab76979e0ee340bc5c857351',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/97769e31ab76979e0ee340bc5c857351/invoke.js"></script>
-
       <figure itemscope itemtype="http://schema.org/VideoObject">
         <img src="https://github.com/xcdnvidey/Zqke9Nw91.mp4/blob/main/Zqke9Nw91.mp4.jpg?raw=true" alt="Brave woman performing a challenging feat" itemprop="thumbnailUrl" loading="lazy" width="180" height="180" />
         <figcaption itemprop="name">This woman is very brave</figcaption>
@@ -278,17 +269,6 @@
         <link itemprop="contentUrl" href="https://brexit-web.github.io/ECvAFrSS1.mp4" />
         <a href="https://cdn-videykey654.github.io/4AKAmAR81.mp4" class="video-link" aria-label="Watch video: Pretty Kitty">Watch Video Now</a>
       </figure>
-
-		<script type="text/javascript">
-	atOptions = {
-		'key' : '4a2fc598ebbbdbc95eb3bef73798c939',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/4a2fc598ebbbdbc95eb3bef73798c939/invoke.js"></script>
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
         <img src="https://github.com/xcdnvidey/tf6Qm5ZE1.mp4/blob/main/tf6Qm5ZE1.mp4.jpg?raw=true" alt="Obstacle or event happening in the middle of a road" itemprop="thumbnailUrl" loading="lazy" width="180" height="180" />
