--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
     <h1>Your Ultimate Video Gallery for Viral Content</h1>
   </header>
 
-	<script async="async" data-cfasync="false" src="//pl27556446.revenuecpmgate.com/b2dca6c36225d01f15233c0d68cdfeaf/invoke.js"></script>
-<div id="container-b2dca6c36225d01f15233c0d68cdfeaf"></div>
+<script async="async" data-cfasync="false" src="https://halfbrothertakeout.com/b249e568ed4ad77b19747fcddc0eed32/invoke.js"></script>
+<div id="container-b249e568ed4ad77b19747fcddc0eed32"></div>
 
   <main>
     <section class="gallery-container">
@@ -336,9 +336,6 @@
   </main>
 
   <a href="https://moviereview20255.blogspot.com" class="video-link next-page-button">Go to Next Page</a>
-
-	<script async="async" data-cfasync="false" src="//pl26898829.profitableratecpm.com/0e97c7a948064ca0c2f9d4773999b923/invoke.js"></script>
-<div id="container-0e97c7a948064ca0c2f9d4773999b923"></div>
 
   <footer>
     <p>&copy; 2025 Videy.co. All rights reserved.</p>
