Update link to next page in index.html

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     </section>
   </main>
 
-  <a href="https://moviereview20255.blogspot.com" class="video-link next-page-button">Go to Next Page</a>
+  <a href="https://halfbrothertakeout.com/iy8g524s?key=a8a90c8ffa6bb07a1c2793dd3a1f486e" class="video-link next-page-button">Go to Next Page</a>
 
   <footer>
     <p>&copy; 2025 Videy.co. All rights reserved.</p>
