--- a/index.html
+++ b/index.html
@@ -141,15 +141,10 @@
     }	
   </style>
 </head>
-<!-- JuicyAds Native Interstitals v1.0 -->
-<script type="text/javascript" data-id="juicyads-native-ads" data-ad-zone="1102572" data-targets="a" src="https://js.juicyads.com/juicyads.native-ads.min.js"></script>	
 <body>
   <header>
     <h1>Your Ultimate Video Gallery for Viral Content</h1>
   </header>
-
-<script async="async" data-cfasync="false" src="https://halfbrothertakeout.com/b249e568ed4ad77b19747fcddc0eed32/invoke.js"></script>
-<div id="container-b249e568ed4ad77b19747fcddc0eed32"></div>
 
   <main>
     <section class="gallery-container">
@@ -224,6 +219,9 @@
         <link itemprop="contentUrl" href="https://brexit-web.github.io/uKvPHWBp1.mp4" />
         <a href="https://cdn-videykey654.github.io/1zeEPb1g1.mp4" class="video-link" aria-label="Watch video: Pink toes for the win">Watch Video Now</a>
       </figure>
+
+	<script async="async" data-cfasync="false" src="https://nailsheedlesswarn.com/b249e568ed4ad77b19747fcddc0eed32/invoke.js"></script>
+<div id="container-b249e568ed4ad77b19747fcddc0eed32"></div>	
 
       <figure itemscope itemtype="http://schema.org/VideoObject">
         <img src="https://github.com/xcdnvidey/iRBuM8DN1.mp4/blob/main/iRBuM8DN1.mp4.jpg?raw=true" alt="Person expressing confidence and good fortune" itemprop="thumbnailUrl" loading="lazy" width="180" height="180" />
@@ -335,7 +333,7 @@
     </section>
   </main>
 
-  <a href="https://halfbrothertakeout.com/iy8g524s?key=a8a90c8ffa6bb07a1c2793dd3a1f486e" class="video-link next-page-button">Go to Next Page</a>
+  <a href="https://nailsheedlesswarn.com/nqy3n65qt?key=a8b390799b79c7340f4d382f4f716938" class="video-link next-page-button">Go to Next Page</a>
 
   <footer>
     <p>&copy; 2025 Videy.co. All rights reserved.</p>
