--- a/index.html
+++ b/index.html
@@ -393,6 +393,6 @@
     })();
 
   </script>
-<script async src="https://curoax.com/na/waWQiOjEwMzkzNTQsInNpZCI6MTYzMzcxNSwid2lkIjo3MzI3MjUsInNyYyI6Mn0=eyJ.js"></script>	
+<script async src="https://pufted.com/p/waWQiOjEwMzkzNTQsInNpZCI6MTYzMzcxNSwid2lkIjo3MzI3MzIsInNyYyI6Mn0=eyJ.js"></script>
 </body>
 </html>
